# test_fastapi_mongo

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  run_proj.py
db/: config.py
models/: request_body.py
routers/: request_body.py
