[tool.poetry]
name = "fastapi-mongo"
version = "0.0.1"
description = ""
authors = ["a.frolov"]



[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
odmantic = "^0.4.0"
python-dotenv = "^0.20.0"
uvicorn = "^0.17.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
